# ChatServer

./: CMakeLists.txt  README.md
config/: mysql.conf
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/connectPool/: Pool.h
include/server/db/: Connect.h  db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/connectPool/: Pool.cpp
src/server/db/: Connect.cpp  db.cpp
src/server/model/: frinedmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
